--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/css-modules": "^1.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"eslint": "^8.40.0",
 		"eslint-config-prettier": "^8.8.0",
